<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_arrow_back"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/ndot_57"
            android:text="@string/extra_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:text="@string/extra_desc"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="?attr/colorSurfaceContainer"
            app:cardCornerRadius="28dp"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp">

                <ImageView
                    android:id="@+id/iconTorch"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_flashlight_qs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/textTorchTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/extra_torch_brightness_title"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iconTorch" />

                <TextView
                    android:id="@+id/textTorchDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/extra_torch_brightness_desc"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTorchTitle" />

                <TextView
                    android:id="@+id/textTorchBrightnessLevel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/brightness_high"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTorchDesc" />

                <FrameLayout
                    android:id="@+id/sliderTorchContainer"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/slider_bg"
                    android:paddingHorizontal="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTorchBrightnessLevel">

                    <org.duhen.dglyphs.BrightnessSliderView
                        android:id="@+id/sliderTorchBrightness"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?attr/colorSurfaceContainer"
            app:cardCornerRadius="28dp"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <TextView
                    android:id="@+id/textLimiterTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_torch_limiter_title"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/textLimiterDesc"
                    app:layout_constraintEnd_toStartOf="@id/switchTorchLimiter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textLimiterDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/extra_torch_limiter_desc"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@id/switchTorchLimiter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLimiterTitle" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchTorchLimiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>